leitura feita com sucesso

--- a/LeitorPDF.ipynb
+++ b/LeitorPDF.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxPrljs1Di8AogEKWhcuka",
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,16 +39,18 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "!pip install pdfplumber pandas openpyxl"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "KB2LiCgfe8Oq",
         "outputId": "b0372788-9048-406c-9f00-de279ce4a4f4"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,13 +91,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gkcVLCALcRa3",
-        "outputId": "d1aa8650-8df8-45b0-eb71-cb1f9a7362b8"
+        "outputId": "f8da5970-29b3-426b-c87f-c6afee88fd58"
       },
       "outputs": [
         {
@@ -114,30 +116,6 @@
         "# Lista para armazenar os dicionários dos dados extraídos\n",
         "dados = []\n",
         "\n",
-        "# Função que extrai o valor de um campo no formato \"Campo.......: valor\"\n",
-        "def extrair_valor(campo, texto):\n",
-        "    # regex para capturar depois do \"campo\" até quebra de linha ou próximo campo\n",
-        "    if campo == 'Placa.......':\n",
-        "      pattern = re.compile(rf'{re.escape(campo)}\\.*:\\s*(.{7})')  # Pega 7 caracteres após o campo\n",
-        "      match = pattern.search(texto)\n",
-        "      if match:\n",
-        "        return match.group(1).strip()\n",
-        "\n",
-        "    if campo == 'Marca':\n",
-        "        pattern = re.compile(rf'{re.escape(campo)}\\.*:\\s*([^A]*)')  # Pega até o primeiro 'A'\n",
-        "        match = pattern.search(texto)\n",
-        "        if match:\n",
-        "            return match.group(1).strip()\n",
-        "\n",
-        "    # Caso não seja Placa nem Marca, aplica o padrão normal\n",
-        "    pattern = re.compile(rf'{re.escape(campo)}\\.*:\\s*(.*)')\n",
-        "    match = pattern.search(texto)\n",
-        "    if match:\n",
-        "        return match.group(1).strip()\n",
-        "\n",
-        "    return ''\n",
-        "\n",
-        "\n",
         "with pdfplumber.open('/content/Leo_Teste_PDF.pdf') as pdf:\n",
         "    texto_completo = ''\n",
         "    for pagina in pdf.pages:\n",
@@ -147,43 +125,53 @@
         "    blocos = re.split(r'\\n\\.{10,}\\n', texto_completo)\n",
         "\n",
         "    for bloco in blocos:\n",
-        "        # Só processar blocos que tem \"Placa.......:\"\n",
-        "        if 'Placa.......:' in bloco:\n",
-        "            # Extrai os campos desejados de forma simples\n",
-        "            placa = extrair_valor('Placa.......', bloco)\n",
-        "            marca = extrair_valor('Marca', bloco)\n",
-        "            proprietario = extrair_valor('Proprietário Atual', bloco)\n",
-        "            telefone_resp = extrair_valor('Telefone Responsável', bloco)\n",
-        "            origem = extrair_valor('Origem', bloco)\n",
-        "            destinatario = extrair_valor('Destinatário', bloco)\n",
-        "            chassi = extrair_valor('Chassi', bloco)\n",
-        "            ano_fabricado = extrair_valor('Ano Fabricado', bloco)\n",
-        "            ano_modelo = extrair_valor('Ano Modelo', bloco)\n",
-        "            telefone_comercial = extrair_valor('Telefone Comercial', bloco)\n",
-        "            exercicio = extrair_valor('Exercício', bloco)\n",
-        "            renavam = extrair_valor('Renavam', bloco)\n",
-        "            telefone_celular = extrair_valor('Telefone Celular', bloco)\n",
+        "     if 'Placa.......:' in bloco:\n",
+        "        # Tratamento especial para a Placa\n",
+        "        match = re.search(r'Placa\\.*:\\s*(.{7})', bloco)\n",
+        "        placa = match.group(1).strip() if match else ''\n",
         "\n",
-        "            dados.append({\n",
-        "                'PLACA': placa,\n",
-        "                'MARCA': marca,\n",
-        "                'PROPRIETÁRIO ATUAL': proprietario,\n",
-        "                'TELEFONE RESPONSÁVEL': telefone_resp,\n",
-        "                'ORIGEM': origem,\n",
-        "                'DESTINATÁRIO': destinatario,\n",
-        "                'CHASSI': chassi,\n",
-        "                'ANO FABRICADO': ano_fabricado,\n",
-        "                'ANO MODELO': ano_modelo,\n",
-        "                'TELEFONE COMERCIAL': telefone_comercial,\n",
-        "                'EXERCÍCIO': exercicio,\n",
-        "                'RENAVAM': renavam,\n",
-        "                'TELEFONE CELULAR': telefone_celular\n",
-        "            })\n",
+        "        # Tratamento especial para a Marca\n",
+        "        match = re.search(r'Marca\\.*:\\s*(.*?)(?=\\bAno\\b)', bloco)\n",
+        "        marca = match.group(1).strip() if match else ''\n",
+        "\n",
+        "        # Tratamento especial para a Proprietário\n",
+        "        match = re.search(r'Prop. Atual\\.*:\\s*(.*)', bloco)\n",
+        "        proprietario = match.group(1).strip()[:30] if match else ''\n",
+        "\n",
+        "        # Extrair telefones, só os 11 primeiros números\n",
+        "        match = re.search(r'Fone Res\\.*:\\s*(.{13})', bloco)\n",
+        "        telefone_res = ''.join(filter(str.isdigit, match.group(1)))[:11] if match else ''\n",
+        "\n",
+        "        match = re.search(r'Fone Com\\.*:\\s*(.{13})', bloco)\n",
+        "        telefone_com = ''.join(filter(str.isdigit, match.group(1)))[:11] if match else ''\n",
+        "\n",
+        "        match = re.search(r'Fone Cel\\.*:\\s*(.{13})', bloco)\n",
+        "        telefone_cel = ''.join(filter(str.isdigit, match.group(1)))[:11] if match else ''\n",
+        "\n",
+        "        # Extrair origem sendo ele a linha toda da leitura\n",
+        "        #####VERIFICAR SE PODE PARAR DE LER AO IDENTIFICAR ESPAÇO (VAZIO)\n",
+        "        match = re.search(r'Origem\\.*:\\s*(.*)', bloco)\n",
+        "        origem = match.group(1).strip()[:30] if match else ''\n",
+        "\n",
+        "        # Extrair exercicios, sendo ele sempre quatro digitos após :\n",
+        "        match = re.search(r'Exer:\\s*(.{4})', bloco)\n",
+        "        exercicio = match.group(1).strip() if match else ''\n",
+        "\n",
+        "        dados.append({\n",
+        "            'PLACA': placa,\n",
+        "            'MARCA': marca,\n",
+        "            'ORIGEM': origem,\n",
+        "            'PROPRIETÁRIO ATUAL': proprietario,\n",
+        "            'TELEFONE RESPONSÁVEL': telefone_res,\n",
+        "            'TELEFONE CELULAR': telefone_cel,\n",
+        "            'TELEFONE COMERCIAL': telefone_com,\n",
+        "            'EXERCÍCIO': exercicio,\n",
+        "        })\n",
         "\n",
         "# Transforma em DataFrame e salva\n",
         "df = pd.DataFrame(dados)\n",
-        "df.to_excel('dados_extraidos.xlsx', index=False)\n",
-        "print('Dados extraídos e salvos no Excel!')\n"
+        "df.to_excel('dados_extraidosaqui.xlsx', index=False)\n",
+        "print('Dados extraídos e salvos no Excel!')"
       ]
     }
   ]
