--- a/LeitorPDF.ipynb
+++ b/LeitorPDF.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,6 +172,19 @@
         "df.to_excel('dados_extraidosaqui.xlsx', index=False)\n",
         "print('Dados extraídos e salvos no Excel!')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# MELHORIAS\n",
+        "*   interromper ciclo caso PDF corrompido\n",
+        "*   Item da lista\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "OXUWipxV6I28"
+      }
     }
   ]
 }
