Arrumando campos de origem, sem sair destinatario

--- a/LeitorPDF.ipynb
+++ b/LeitorPDF.ipynb
@@ -90,13 +90,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gkcVLCALcRa3",
-        "outputId": "f8da5970-29b3-426b-c87f-c6afee88fd58"
+        "outputId": "2e8db7b2-2ef0-41c7-dafd-ea5a0f3a4338"
       },
       "outputs": [
         {
@@ -148,9 +148,11 @@
         "        telefone_cel = ''.join(filter(str.isdigit, match.group(1)))[:11] if match else ''\n",
         "\n",
         "        # Extrair origem sendo ele a linha toda da leitura\n",
-        "        #####VERIFICAR SE PODE PARAR DE LER AO IDENTIFICAR ESPAÇO (VAZIO)\n",
         "        match = re.search(r'Origem\\.*:\\s*(.*)', bloco)\n",
         "        origem = match.group(1).strip()[:30] if match else ''\n",
+        "        # em casos onde não há origem, ele já vai direto para linha de baixo onde é o campos de \"destinatario\", portanto, caso seja destinatario não validar\n",
+        "        if origem == 'Destinatário:':\n",
+        "          origem = ''\n",
         "\n",
         "        # Extrair exercicios, sendo ele sempre quatro digitos após :\n",
         "        match = re.search(r'Exer:\\s*(.{4})', bloco)\n",
@@ -169,7 +171,7 @@
         "\n",
         "# Transforma em DataFrame e salva\n",
         "df = pd.DataFrame(dados)\n",
-        "df.to_excel('dados_extraidosaqui.xlsx', index=False)\n",
+        "df.to_excel('dados_extraidos.xlsx', index=False)\n",
         "print('Dados extraídos e salvos no Excel!')"
       ]
     },
