Filtros feitos (esqueleto)

--- a/LeitorPDF.ipynb
+++ b/LeitorPDF.ipynb
@@ -47,7 +47,7 @@
         },
         "collapsed": true,
         "id": "KB2LiCgfe8Oq",
-        "outputId": "e62daa50-df1d-4b79-afba-6e30d1ca6352"
+        "outputId": "b2e43808-394b-4886-fa4a-b096a531d63c"
       },
       "execution_count": 1,
       "outputs": [
@@ -57,7 +57,7 @@
           "text": [
             "Collecting pdfplumber\n",
             "  Downloading pdfplumber-0.11.7-py3-none-any.whl.metadata (42 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/42.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.8/42.8 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/42.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.8/42.8 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (2.2.2)\n",
             "Requirement already satisfied: openpyxl in /usr/local/lib/python3.11/dist-packages (3.1.5)\n",
             "Collecting pdfminer.six==20250506 (from pdfplumber)\n",
@@ -65,7 +65,7 @@
             "Requirement already satisfied: Pillow>=9.1 in /usr/local/lib/python3.11/dist-packages (from pdfplumber) (11.2.1)\n",
             "Collecting pypdfium2>=4.18.0 (from pdfplumber)\n",
             "  Downloading pypdfium2-4.30.1-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (48 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m48.2/48.2 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m48.2/48.2 kB\u001b[0m \u001b[31m824.5 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: charset-normalizer>=2.0.0 in /usr/local/lib/python3.11/dist-packages (from pdfminer.six==20250506->pdfplumber) (3.4.2)\n",
             "Requirement already satisfied: cryptography>=36.0.0 in /usr/local/lib/python3.11/dist-packages (from pdfminer.six==20250506->pdfplumber) (43.0.3)\n",
             "Requirement already satisfied: numpy>=1.23.2 in /usr/local/lib/python3.11/dist-packages (from pandas) (2.0.2)\n",
@@ -77,11 +77,11 @@
             "Requirement already satisfied: cffi>=1.12 in /usr/local/lib/python3.11/dist-packages (from cryptography>=36.0.0->pdfminer.six==20250506->pdfplumber) (1.17.1)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/dist-packages (from cffi>=1.12->cryptography>=36.0.0->pdfminer.six==20250506->pdfplumber) (2.22)\n",
             "Downloading pdfplumber-0.11.7-py3-none-any.whl (60 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.0/60.0 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.0/60.0 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading pdfminer_six-20250506-py3-none-any.whl (5.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m47.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m31.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading pypdfium2-4.30.1-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.9/2.9 MB\u001b[0m \u001b[31m63.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.9/2.9 MB\u001b[0m \u001b[31m14.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: pypdfium2, pdfminer.six, pdfplumber\n",
             "Successfully installed pdfminer.six-20250506 pdfplumber-0.11.7 pypdfium2-4.30.1\n"
           ]
@@ -90,13 +90,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gkcVLCALcRa3",
-        "outputId": "9988d691-dc4b-4084-d936-727c4376e9f9"
+        "outputId": "b54041b0-41a2-48cb-81bc-5e94069485e9"
       },
       "outputs": [
         {
@@ -186,9 +186,55 @@
         "        })\n",
         "# Transforma em DataFrame e salva\n",
         "df = pd.DataFrame(dados)\n",
-        "df.to_excel('Leitor_GL_1ponto0.xlsx', index=False)\n",
+        "df.to_excel('PDFGLviews1.xlsx', index=False)\n",
         "print('Dados extraídos e salvos no Excel!')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#\"Views do projeto\"#\n"
+      ],
+      "metadata": {
+        "id": "Epp43Trxo2pu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Esqueleto dos filtros\n",
+        "\n",
+        "#Separa tudo com esta origem\n",
+        "filtro_origem = df[df['ORIGEM'].isin(['SUSI COBRA E ENTREGA', 'DANIEL PAGA (TUTUCA)'])].copy()\n",
+        "filtro_origem.to_excel('Origens_separadas.xlsx', index=False)\n",
+        "print(\"Planília SUSI e TUTUCA separados\")\n",
+        "\n",
+        "#Pega todas as linhas em que tem origem e não tem número\n",
+        "filtro_garagens = df[\n",
+        "    (df['ORIGEM'] != \"\") &\n",
+        "    (df['TELEFONE CELULAR'] == \"\") &\n",
+        "    (df['TELEFONE COMERCIAL'] == \"\") &\n",
+        "    (df['TELEFONE RESPONSÁVEL'] == \"\")].copy()\n",
+        "filtro_garagens.to_excel('Garagens_separadas.xlsx', index=False)\n",
+        "print(\"Planília Garagens sem número separadas\")\n",
+        "## FAZER uma planília separada, tantas placas em tal garagem, usar somente ['origem'], ['Prop atual'], ['placa']\n",
+        "\n",
+        "#Pega todos os clientes sem contato \"S/N\"\n",
+        "filtro_contato = df[\n",
+        "    (df['ORIGEM'] == \"\") &\n",
+        "    (df['TELEFONE CELULAR'] == \"\") &\n",
+        "    (df['TELEFONE COMERCIAL'] == \"\") &\n",
+        "    (df['TELEFONE RESPONSÁVEL'] == \"\")].copy()\n",
+        "print(\"Planília Clientes sem contato separadas\")\n",
+        "## Grifar no .xlsx todas as linhas\n",
+        "\n",
+        "filtro_contato.to_excel('Contatos_separados.xlsx', index=False)"
+      ],
+      "metadata": {
+        "id": "rIWM_M25pDt5"
+      },
+      "execution_count": 19,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -196,6 +242,7 @@
         "# MELHORIAS\n",
         "*   interromper ciclo caso PDF corrompido\n",
         "*   Item da lista\n",
+        "*   Adicionar os filtros no código principal na versão final\n",
         "\n",
         "\n"
       ],
